tests/negative/lexer/int_digit.orng
// int_digit.orng:6:9: error: 'a' is not a valid decimal digit
//     01_abc
//        ^
// 
fn main() -> Int {
    01_abc
}